--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloom Buddy</title>
 </head>
+
 <body>
-    
+    <nav>
+
+
+    </nav>
+    <main>
+        <h1>Growing Guides:</h1>
+        <!-- //for search bar and filter -->
+        <div id="filters">
+            <select name="foods" id="hr-select">
+                <option value="">Choose a food</option>
+                <hr />
+                <optgroup label="Fruit">
+                    <option value="apple">Apples</option>
+                    <option value="banana">Bananas</option>
+                    <option value="cherry">Cherries</option>
+                    <option value="damson">Damsons</option>
+                </optgroup>
+                <hr />
+                <optgroup label="Vegetables">
+                    <option value="artichoke">Artichokes</option>
+                    <option value="broccoli">Broccoli</option>
+                    <option value="cabbage">Cabbages</option>
+                </optgroup>
+                <hr />
+                <optgroup label="Meat">
+                    <option value="beef">Beef</option>
+                    <option value="chicken">Chicken</option>
+                    <option value="pork">Pork</option>
+                </optgroup>
+                <hr />
+                <optgroup label="Fish">
+                    <option value="cod">Cod</option>
+                    <option value="haddock">Haddock</option>
+                    <option value="salmon">Salmon</option>
+                    <option value="turbot">Turbot</option>
+                </optgroup>
+            </select>
+            <input type="text" placeholder="Search for Plants...">
+        </div>
+        <!-- //for plants to be populated -->
+        <div id="content">
+
+        </div>
+        <!-- //to navigate pages -->
+        <div id="pageBtns">
+
+        </div>
+    </main>
 </body>
+
+
+<footer>
+    <p></p>
+</footer>
+
 </html>
