set up pixi game window

--- a/game.html
+++ b/game.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="js/game/classes.js"></script>
-    <script src="js/game/main.js"></script>
-    <script src="js/game/functions.js"></script>
+    <title>Bloom a Buddy!</title>
 </head>
 <body>
-    
+    <header>
+    </header>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
+    <script src="js/game/main.js"></script>
+    <h1>Insert text here</h1>
 </body>
 </html>
