--- a/index.html
+++ b/index.html
@@ -5,44 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloom Buddy</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Indie+Flower&display=swap" rel="stylesheet">
+
 </head>
+<wrapper>
+<header>
+    <h1>Welcome to Bloom Buddy!</h1>
+</header>
 
 <body>
     <nav>
-
+        <button type="button">Click Me!</button>
+        <button type="button">Click Me!</button>
+        <button type="button">Click Me!</button>
 
     </nav>
     <main>
-        <h1>Growing Guides:</h1>
+        <h2>Growing Guides:</h1>
         <!-- //for search bar and filter -->
         <div id="filters">
             <select name="foods" id="hr-select">
-                <option value="">Choose a food</option>
+                <option value="">Filters</option>
                 <hr />
-                <optgroup label="Fruit">
-                    <option value="apple">Apples</option>
-                    <option value="banana">Bananas</option>
-                    <option value="cherry">Cherries</option>
-                    <option value="damson">Damsons</option>
+                <!-- Low (>3)
+                Medium (4-6)
+                High (7-10) -->
+                <optgroup label="Light Level (1-10)">
+                    <option value="lowLight">Low</option>
+                    <option value="medLight">Medium</option>
+                    <option value="highLight">High</option>
                 </optgroup>
                 <hr />
-                <optgroup label="Vegetables">
-                    <option value="artichoke">Artichokes</option>
-                    <option value="broccoli">Broccoli</option>
-                    <option value="cabbage">Cabbages</option>
+                <optgroup label="Days to Harvest">
+                    <option value="shortHarvest">Less than 30</option>
+                    <option value="longHarvest">More than 30</option>
                 </optgroup>
                 <hr />
-                <optgroup label="Meat">
-                    <option value="beef">Beef</option>
-                    <option value="chicken">Chicken</option>
-                    <option value="pork">Pork</option>
+                <optgroup label="Growth Rate">
+                    <option value="beef">Fast</option>
+                    <option value="chicken">Slow</option>
                 </optgroup>
                 <hr />
-                <optgroup label="Fish">
-                    <option value="cod">Cod</option>
-                    <option value="haddock">Haddock</option>
-                    <option value="salmon">Salmon</option>
-                    <option value="turbot">Turbot</option>
+                <!-- distributions lowk might b hard its a world standard and paginated?  -->
+                <optgroup label="Native To">
+                    <option value="usa">USA</option>
+                    <option value="canada">Canada</option>
+                    <option value="europe">Europe</option>
+                    <option value="asia">Asia</option>
+                    <option value="africa">Africa</option>
                 </optgroup>
             </select>
             <input type="text" placeholder="Search for Plants...">
@@ -53,6 +66,8 @@
         </div>
         <!-- //to navigate pages -->
         <div id="pageBtns">
+            <button type="button">back!</button>
+            <button type="button">forward!</button>
 
         </div>
     </main>
@@ -62,5 +77,5 @@
 <footer>
     <p></p>
 </footer>
-
+</wrapper>
 </html>
