--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 <wrapper>
 <header>
-    <h1>Welcome to Bloom Buddy!</h1>
+    <h1>Welcome to </h1> <img src="temp/heading.png" alt="">
+
 </header>
 
 <body>
