--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h2>Growing Guides:</h1>
         <!-- //for search bar and filter -->
         <div id="filters">
-            <select name="foods" id="hr-select">
+            <select name="filters" id="dropdown">
                 <option value="">Filters</option>
                 <hr />
                 <!-- Low (>3)
@@ -76,7 +76,7 @@
 
 
 <footer>
-    <p></p>
+    <p>Made by Leah, Ariel, Kenzie, Katie</p>
 </footer>
 </wrapper>
 </html>
