--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Indie+Flower&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 <wrapper>
 <header>
@@ -19,10 +18,10 @@
 
 <body>
     <nav>
-        <button type="button">Click Me!</button>
-        <button type="button">Click Me!</button>
-        <button type="button">Click Me!</button>
-
+            <a href="#guides">Guides</a>
+            <a href="#about">About</a>
+            <a href="#news">Bloom a Buddy</a>
+          
     </nav>
     <main>
         <h2>Growing Guides:</h1>
@@ -46,8 +45,8 @@
                 </optgroup>
                 <hr />
                 <optgroup label="Growth Rate">
-                    <option value="beef">Fast</option>
-                    <option value="chicken">Slow</option>
+                    <option value="fastGrowth">Fast</option>
+                    <option value="slowGrowth">Slow</option>
                 </optgroup>
                 <hr />
                 <!-- distributions lowk might b hard its a world standard and paginated?  -->
