--- a/about.html
+++ b/about.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloom a Buddy</title>
-    <link rel="stylesheet" href="css/gamestyles.css">
+    <title>Bloom Buddy</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
@@ -21,15 +22,14 @@
 </header>
 
 <body>
-    <div id="game">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-    <script src="js/game/main.js"></script>
-</div>
+    <main>
+      
+    </main>
 </body>
 
-</wrapper>
+
 <footer>
     <p>Made by Leah, Ariel, Kenzie, Katie</p>
 </footer>
+</wrapper>
 </html>
