--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     </div>
 
     <body>
+        
+        <script src = "js/classes.js"></script>
+        <script src = "js/main.js"></script>
 
         <main>
             <div id="contentHeader">
