--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </div>
 
     <body>
-        
-        <script src = "js/classes.js"></script>
-        <script src = "js/main.js"></script>
+
+        <script src = "js/web/classes.js"></script>
+        <script src = "js/web/main.js"></script>
 
         <main>
             <div id="contentHeader">
