--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/6.5.8/browser/pixi.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="js/game/main.js"></script>
+    <script src="js/game/classes.js"></script>
     <h1>Insert text here</h1>
 </body>
 </html>
