--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                 <a href="game.html">Bloom a Buddy</a>
             </nav>
             <header>
-                <h1>Welcome to </h1> <img src="temp/heading.png" alt="">
-                <a href="#contentHeader">Click here to see the content below.</a>
+                 <h1>Welcome to Bloom Buddy!</h1> <!-- <img src="temp/heading.png" alt=""> -->
+                <a href="#contentHeader">Jump to Guides</a>
             </header>
           
         </div>
