--- a/about.html
+++ b/about.html
@@ -5,31 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloom Buddy</title>
-    <link rel="stylesheet" href="css/styles.css">
+
+    <style>
+       .bgImg {
+        background-image: url('unnamed.jpg');
+        background-color: pink;
+       }
+    </style>
+
+    <link rel="stylesheet" href="css/aboutstyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <wrapper>
-    <nav>
-        <a href="index.html">Guides</a>
-        <a href="about.html">About</a>
-        <a href="game.html">Bloom a Buddy</a> 
-    </nav>
-<header>
-    <h1>Welcome to </h1> <img src="temp/heading.png" alt="">
 
-</header>
+    <div class="bgImg">
 
-<body>
-    <main>
-      
-    </main>
-</body>
+        <div id="container">
+            <nav>
+                <a href="index.html">Guides</a>
+                <a href="about.html">About</a>
+                <a href="game.html">Bloom a Buddy</a>
+            </nav>
+            <header>
+                 <h1>Meet the Team!!</h1> <!-- <img src="temp/heading.png" alt=""> -->
+            </header>
+          
+        </div>
 
 
-<footer>
-    <p>Made by Leah, Ariel, Kenzie, Katie</p>
-</footer>
+    </div>
+
+    <body>
+        <main>
+            <div id="content">
+                <p>slayed</p>
+            </div>
+        </main>
+    </body>
+
+
+    <footer>
+
+        <p>Website created by Leah, Ariel, Kenzie, and Katie for BrickHacks 2024</p>
+    </footer>
 </wrapper>
+
 </html>
