--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <wrapper>
 
@@ -84,7 +84,6 @@
             </div>
             <!-- //for plants to be populated -->
             <div id="content">
-                <p>content</p>
             </div>
             <!-- //to navigate pages -->
             <div id="pageBtns">
