--- a/game.html
+++ b/game.html
@@ -7,18 +7,15 @@
     <link rel="stylesheet" href="css/gamestyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
-<wrapper>
+
     <nav>
         <a href="index.html">Guides</a>
         <a href="about.html">About</a>
         <a href="game.html">Bloom a Buddy</a> 
     </nav>
-<header>
-    <h1>Welcome to </h1> <img src="temp/heading.png" alt="">
 
-</header>
 
 <body>
     <div id="game">
@@ -26,11 +23,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="js/game/main.js"></script>
     <script src="js/game/classes.js"></script>
-    <h1>Insert text here</h1>
 </body>
 
-</wrapper>
-<footer>
-    <p>Made by Leah, Ariel, Kenzie, Katie</p>
-</footer>
+
+
 </html>
