--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dekko&family=Nanum+Pen+Script&family=Yantramanav:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
-
+<wrapper>
     <nav>
         <a href="index.html">Guides</a>
         <a href="about.html">About</a>
@@ -23,8 +23,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="js/game/main.js"></script>
     <script src="js/game/classes.js"></script>
+    </div>
 </body>
 
 
 
+</wrapper>
 </html>
