--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     </optgroup>
                 </select>
                 <input type="text" placeholder="Search for Plants...">
+                <button type="button">search</button>
             </div>
             <!-- //for plants to be populated -->
             <div id="content">
