pls work prev next btns

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </div>
             <!-- //to navigate pages -->
             <div id="pageBtns">
-                <button type="button">previous page</button>
-                <button type="button">next page</button>
+                <button type="button" id="prev">previous page</button>
+                <button type="button" id="next">next page</button>
 
             </div>
         </main>
