--- a/about.html
+++ b/about.html
@@ -40,7 +40,15 @@
     <body>
         <main>
             <div id="content">
-                <p>slayed</p>
+                
+                <h2>Website Details:</h2>
+                <p>Bloom Buddy was inspired by the Trefle API, a free plant API with thousands of plants. Many people want to get into gardening, but proper and easily accessible information is hard to come by. Our website streamlines the research process by providing the proper care information for any plant.</p> <br>
+                <h3>Challenges:</h3>
+                <p>Web: The API doesn't implement CORS completely correctly when requesting a client-side access token through NodeJS (token is incomplete). Looking at the JSON file with no prior experience with backend servers halted a lot of the overnight progress and we had to utilize an alternate way to acquire a client-side token to solve the issue.</p>
+                <p>Game: For this game, we used Pixi.JS, a framework we had minimal experience in. Our main challenge was learning the documentation and linking our classes and functions into one cohesive product.</p>
+                <h3>What's Next:</h3>
+                <p> For this game, we used Pixi.JS, a framework we had minimal experience in. Our main challenge was learning the documentation and linking our classes and functions into one cohesive product.                </p>
+                <a href="https://docs.trefle.io">Trefle API</a> 
             </div>
         </main>
     </body>
